--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "auth0-js": "^9.11.1",
     "axios": "^0.19.0",
     "formik": "^1.5.7",
+    "formsy-react": "^1.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
