--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.11",
     "@material-ui/core": "^4.4.0",
+    "@material-ui/pickers": "^3.2.5",
     "antd": "^3.19.2",
     "auth0-js": "^9.11.1",
     "axios": "^0.19.0",
     "formik": "^1.5.7",
     "formsy-react": "^1.1.5",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
