--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js --ext js,graphql --exec babel-node",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "get-schema": "graphql get-graphql -p roundly"
   },
   "keywords": [],
   "author": "Jason Roundtree",
@@ -14,8 +15,10 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "graphql-cli": "^3.0.14",
     "graphql-yoga": "^1.18.3",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "prisma-binding": "^2.3.16"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
